--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5287,11 +5287,11 @@ a.bg-light:focus, a.bg-light:hover {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #1A130F !important;
 }
 
 a.bg-dark:focus, a.bg-dark:hover {
-  background-color: #1d2124 !important;
+  background-color: #000000 !important;
 }
 
 .bg-white {
