--- a/general/style.css
+++ b/general/style.css
@@ -1,7 +1,9 @@
 .navbar-collapse{
 	justify-content: flex-end;
 }
-
+.capitalize{
+	text-transform: uppercase;
+}
 /*header*/
 .relative{
 	position: relative;
@@ -12,9 +14,33 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-image: url("http://placehold.it/800x650");
+	background-image: url("../img/header.jpg");
 }
+div.banner{
+	text-align: center; 
+	padding-top: 4em;
+}
+.round-btn{
+	border-radius:  50px;
+}
+div.download-it{
+	margin-top: 2.6em;
+}
+div.download-it li ,div.download-it ul{
+	padding: 0em;
+	list-style-type: none;
+}
+.fitur{
+	margin-top: 2em;
+}
+div.media{
+	padding: 1em;
+}
+div.media img{
 
+	height: 50px;
+
+}
 /*pricing*/
 div.features h2{
 	text-align: center;
@@ -24,7 +50,7 @@ div.features img{
 	margin :0 auto;
 }
 div.price{
-	border : 15px solid aliceblue;
+	border : 15px solid #F2F4F5;
 	padding: 3em;
 	background-color: #fff;
 	text-align: center;
@@ -44,18 +70,34 @@ strong.price-figure{
 div.contact-info{
 	margin:0 auto;
 	text-align: center;
+	background-color: #F2F4F5;
+	padding: 3em 0;
 }
+div.contact-info h3{
+	padding: 1em 0;	
+}
+div.contact-items h5{
+	margin:0.75em 0;
+}
+
 div.contact-items h5{
 	width: 15em; 
 	display: inline-block;
 }
 
 /*downlaod sectoin*/
+
 div.download-template{
 	margin:0 auto;
 	text-align: center;
 	width: 100%;	
 	max-width: 400em;
+	padding: 3em ;
+}
+div.download-template p{
+	max-width: 50em;
+	margin:0 auto;
+	padding-bottom: 1.3em;
 }
 .footer-img{
 	width: 100%;
@@ -63,5 +105,21 @@ div.download-template{
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-image: url("http://placehold.it/800x300");
+	background-image: url("../img/footer.jpg");
 }
+
+/*plans*/
+div.plans-container{
+	background-color: #F2F4F5;
+}
+div.plans-container .row:first-child{
+
+	width: 100%;
+	max-width: 48em;
+	margin:0 auto;
+	text-align: center;
+	padding: 7em 0 3em 0;
+}
+div.plans-container .row:nth-child(2){
+	margin:0 2em;
+	}
